--- a/index.html
+++ b/index.html
@@ -6,9 +6,16 @@
     <link rel="stylesheet" href="/css/reset.css">
     <link rel="stylesheet" href="/css/styles.css">
     <link rel="icon" href="/img/icon30x30.png">
+    <link rel="stylesheet" href="/css/header.css">
     <title>PabloToledo</title>
 </head>
 <body>
-    
+    <header class="cabecalho">
+        <nav class="cabecalho__navegacao">
+            <a class="cabecalho__navegacao__sobre btn btn-neon" href="*">Sobre</a>
+            <a class="cabecalho__navegacao__links btn btn-neon" href="*">Links</a>
+        </nav>
+        
+    </header>
 </body>
 </html>
