--- a/index.html
+++ b/index.html
@@ -4,18 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/reset.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="css/main.css">
     <link rel="icon" href="/img/icon30x30.png">
     <link rel="stylesheet" href="/css/header.css">
     <title>PabloToledo</title>
 </head>
 <body>
+    <div class="fixed-top">
     <header class="cabecalho">
         <nav class="cabecalho__navegacao">
             <a class="cabecalho__navegacao__sobre btn btn-neon" href="*">Sobre</a>
             <a class="cabecalho__navegacao__links btn btn-neon" href="*">Links</a>
         </nav>
-        
     </header>
+    </div>
+    <main>
+        <section class="meio">
+            <img class="imagem" src="/img/pablo 1.svg" alt="">
+        </section>
+        
+    </main>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 </body>
 </html>
